h1. CHANGELOG

h2. 2.0.1 August 8, 2012

* wrote a "Guide" to provide complete documentation
* diagnostics module compares user's recipes and preferences to known working combinations
* add a prefs{} hash for conditional configuration options (the 'quiz')
* option to set 'quiz' preferences in a defaults file
* add gems at a prompt or from a defaults file for a gems[] array
* new 'copy_from_repo' method in helpers.erb
* reduce inline code with more downloading of files from the example app repos on GitHub
* conversion of ERB files to Haml or Slim with the 'copy_from_repo' method
* remove recipes that are outdated or unsupported
* reorganize recipes for easier maintenance
* new recipe: 'example' as documentation
* new recipe: 'setup' for conditional configuration options (the 'quiz')
* new recipe: 'readme' to build README files that provide greater detail
* new recipe: 'gems' collects all the gems in one recipe for easier updating
* new recipe: 'testing' combines rspec and cucumber options with fixture replacements
* new recipe: 'auth' combines devise, cancan and omniauth options
* new recipe: 'email' consolidates email account options
* new recipe: 'models' consolidates all models
* new recipe: 'controllers' consolidates all controllers
* new recipe: 'views' consolidates all views
* new recipe: 'routes' consolidates all routes
* new recipe: 'frontend' is the new name for the 'html5' recipe
* new recipe: 'database' sets up the database seed and runs migrations
* prompt to set -T or -O args (but not when generating application templates)
* check if SQLite is present in the Gemfile and throw an error if MongoDB is selected
* add 'rvm' option to 'extras' recipe to create a project-specific gemset and .rvmrc file
* run 'bundle install --without production' in helpers.erb to avoid gems used only in production

h2. 1.5.6 unreleased

* update 'rspec' recipe to allow newer versions of gem 'mongoid-rspec'
* update 'seed_database' to drop MongoDB database before seeding
